--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx nodemon",
+    "build": "tsc --build",
     "test": "jest"
   },
   "author": "thierry",
